# discord-bot

./: .gitignore  Cargo.toml  config.json
bot/: Cargo.toml
bot/sql/gambling/GamblingManager/: bet.sql
bot/sql/gambling/GameManager/: row.sql
bot/src/: cron.rs  error.rs  main.rs  reset.rs
bot/src/handler/: guild_create.rs  mod.rs  ready.rs  thread_delete.rs
bot/src/handler/interaction/: autocomplete.rs  command.rs  component.rs  modal.rs
bot/src/modules/: mod.rs
bot/src/modules/ai/: mod.rs
bot/src/modules/destiny2/: mod.rs
bot/src/modules/destiny2/info/: mod.rs
bot/src/modules/events/: live.rs
bot/src/modules/gambling/: blackjack.rs  coinflip.rs  daily.rs  dig.rs  effects.rs  gift.rs  goals.rs  inventory.rs  leaderboard.rs  lotto.rs  mine.rs  mod.rs  prestige.rs  profile.rs  roll.rs  rps.rs  send.rs  shop.rs  stamina.rs  tictactoe.rs  work.rs
bot/src/modules/levels/: commands.rs  mod.rs
bot/src/modules/lfg/: mod.rs  slash_command.rs
bot/src/modules/moderation/: infraction.rs  logs.rs  mod.rs  rules.rs
bot/src/modules/reaction_roles/: mod.rs  slash_command.rs
bot/src/modules/suggestions/: mod.rs  slash_command.rs
bot/src/modules/temp_voice/: commands.rs  mod.rs
bot/src/modules/ticket/: mod.rs  slash_commands.rs
endgame-analysis/: Cargo.toml
endgame-analysis/src/: error.rs  weapon.rs
family/: Cargo.toml
family/src/: error.rs  family_manager.rs
family/src/commands/: cache.rs
family/src/commands/information/: familysize.rs  relationship.rs
gambling/: Cargo.toml
gambling/src/: error.rs  lib.rs  lotto.rs  shop.rs  stamina.rs  utils.rs
gambling/src/commands/: blackjack.rs  coinflip.rs  craft.rs  dig.rs  higher_lower.rs  mod.rs  prestige.rs  roll.rs  rps.rs  tictactoe.rs
gambling/src/commands/shop/: buy.rs  list.rs  mod.rs
gambling/src/models/: gambling.rs  gambling_effects.rs  game_row.rs  mod.rs
gold-star/: Cargo.toml
gold-star/src/: error.rs  manager.rs
gold-star/src/commands/: give_star.rs
levels/: Cargo.toml
lfg/: Cargo.toml
lfg/src/cron/: reminders.rs
lfg/src/modals/: edit.rs
migrations/: 20250214234446_update_temp_voice_table.down.sql  20250214234446_update_temp_voice_table.up.sql  20250303003815_add_icon_column.down.sql  20250303003815_add_icon_column.up.sql  20250324200349_update_destiny_perks_table.down.sql  20250324200349_update_destiny_perks_table.up.sql  20250329090509_update_lfg_guilds.down.sql  20250329090509_update_lfg_guilds.up.sql  20250329141457_create_lfg_messages_table.down.sql  20250329141457_create_lfg_messages_table.up.sql  20250401231801_create_gambling_table.down.sql  20250401231801_create_gambling_table.up.sql  20250402090217_add_daily_column_to_gambling.down.sql  20250402090217_add_daily_column_to_gambling.up.sql  20250402094859_add_lost_to_guilds.down.sql  20250402094859_add_lost_to_guilds.up.sql  20250402134211_update_gambling_table.down.sql  20250402134211_update_gambling_table.up.sql  20250402224123_add_game_to_gambling.down.sql  20250402224123_add_game_to_gambling.up.sql  20250403165847_add_guild_id_to_gambling.down.sql  20250403165847_add_guild_id_to_gambling.up.sql  20250413090605_remove_gambling_from_guild.down.sql  20250413090605_remove_gambling_from_guild.up.sql  20250418141508_create_gambling_items_table.down.sql  20250418141508_create_gambling_items_table.up.sql  20250422185903_add_diamonds_to_gambling.down.sql  20250422185903_add_diamonds_to_gambling.up.sql  20250423235433_create_gambling_goals.down.sql  20250423235433_create_gambling_goals.up.sql  20250425211408_update_diamond_type.down.sql  20250425211408_update_diamond_type.up.sql  20250509180744_create_gambling_effects.down.sql  20250509180744_create_gambling_effects.up.sql  20250518181958_create_gambling_mine.down.sql  20250518181958_create_gambling_mine.up.sql  20250602194229_gambling_and_db_clean_up.down.sql  20250602194229_gambling_and_db_clean_up.up.sql  20250604000049_gambling_inv_unique_key.down.sql  20250604000049_gambling_inv_unique_key.up.sql  (+12 more)
reaction-roles/: Cargo.toml
src/: cron.rs  error.rs  main.rs  mee6.rs  sqlx_lib.rs
src/guild_commands/college_kings/: greetings.rs
src/handler/: guild_create.rs  message.rs  message_create.rs  message_delete.rs  mod.rs  ready.rs  thread_delete.rs  voice_state_update.rs
src/handler/interaction/: autocomplete.rs  command.rs  component.rs  mod.rs  modal.rs
src/handler/ready/message_updates/: mod.rs
src/modals/: render_request.rs
src/modules/: mod.rs
src/modules/ai/: mod.rs
src/modules/destiny2/: mod.rs
src/modules/destiny2/endgame_analysis/: database_manager.rs  mod.rs  slash_commands.rs
src/modules/destiny2/info/: mod.rs
src/modules/destiny2/lfg/: components.rs  mod.rs  modal.rs  slash_command.rs
src/modules/events/: live.rs
src/modules/gambling/: coinflip.rs  craft.rs  daily.rs  dig.rs  effects.rs  gift.rs  goals.rs  higher_lower.rs  inventory.rs  leaderboard.rs  lotto.rs  mine.rs  mod.rs  profile.rs  roll.rs  rps.rs  send.rs  shop.rs  stamina.rs  stats.rs  tictactoe.rs  work.rs
src/modules/levels/: component.rs  message_command.rs  mod.rs  slash_commands.rs
src/modules/misc/: mod.rs  random.rs
src/modules/moderation/: infraction.rs  logs.rs  rules.rs
src/modules/reaction_roles/: mod.rs
src/modules/suggestions/: mod.rs
src/modules/temp_voice/: commands.rs  events.rs  mod.rs
src/modules/ticket/: mod.rs  slash_commands.rs
suggestions/: Cargo.toml
temp-voice/: Cargo.toml
ticket/: Cargo.toml
zayden-core/: Cargo.toml
zayden-core/src/: cron.rs
