[package]
name = "zayden-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
zayden-core = { git = "https://github.com/zayden-bot/slash-command-core.git", branch = "master" }
endgame-analysis = { git = "https://github.com/zayden-bot/endgame-analysis.git", branch = "main" }
lfg = { git = "https://github.com/zayden-bot/lfg.git", branch = "main" }
reaction-roles = { git = "https://github.com/zayden-bot/reaction-roles.git", branch = "main" }
suggestions = { git = "https://github.com/zayden-bot/suggestions.git", branch = "main" }
temp-voice = { git = "https://github.com/zayden-bot/temp-voice.git", branch = "main" }
ticket = { git = "https://github.com/zayden-bot/ticket.git", branch = "main" }

async-trait = { version = "*", default-features = false }
chrono = { version = "*", default-features = false }
chrono-tz = { version = "*", default-features = false }
dotenvy = { version = "*", default-features = false }
futures = { version = "*", default-features = false, features = [
    "async-await",
] }
lazy_static = { version = "*", default-features = false }
serde = { version = "*", default-features = false }
serde_json = { version = "*", default-features = false }
sqlx = { version = "*", default-features = false, features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "macros",
    "chrono",
    "uuid",
] }
tokio = { version = "*", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
url = { version = "*", default-features = false }
walkdir = { version = "*", default-features = false }
rand = { version = "*", default-features = false, features = ["thread_rng"] }
serenity = { version = "*", default-features = false, features = [
    "builder",
    "client",
    "collector",
    "gateway",
    "model",
    "utils",
    "rustls_backend",
] }


[profile.release]
opt-level = 3
panic = "abort"
strip = true
codegen-units = 1
lto = "fat"
