[workspace]
resolver = "3"
members = [
    "bot",
    "zayden-core",
    "endgame-analysis",
    "family",
    "gambling",
    "gold-star",
    "levels",
    "lfg",
    "reaction-roles",
    "suggestions",
    "temp-voice",
    "ticket",
]

[workspace.dependencies]
zayden-core = { path = "./zayden-core" }
endgame-analysis = { path = "./endgame-analysis" }
gambling = { path = "./gambling" }
levels = { path = "./levels" }
lfg = { path = "./lfg" }
reaction-roles = { path = "./reaction-roles" }
suggestions = { path = "./suggestions" }
temp-voice = { path = "./temp-voice" }
ticket = { path = "./ticket" }

sqlx = { version = "*", default-features = false, features = ["macros"] }

[profile.release]
opt-level = 3
panic = "abort"
strip = true
codegen-units = 1
lto = "fat"
