[package]
name = "bot"
version = "0.9.0"
edition = "2024"

[dependencies]
zayden-core = { workspace = true }
endgame-analysis = { workspace = true }
gambling = { workspace = true }
levels = { workspace = true }
lfg = { workspace = true }
reaction-roles = { workspace = true }
suggestions = { workspace = true }
temp-voice = { workspace = true }
ticket = { workspace = true }

bungie-api = { git = "https://github.com/ViridianLink/bungie-api.git", branch = "main" }

async-trait = { version = "*", default-features = false }
bigdecimal = { version = "*", default-features = false }
chrono = { version = "*", default-features = false }
chrono-tz = { version = "*", default-features = false }
cron = { version = "*", default-features = false }
dotenvy = { version = "*", default-features = false }
futures = { version = "*", default-features = false, features = [
    "async-await",
] }
serde = { version = "*", default-features = false }
serde_json = { version = "*", default-features = false }
sqlx = { version = "*", default-features = false, features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "macros",
    "chrono",
    "uuid",
    "json",
    "bigdecimal",
] }
tokio = { version = "*", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
time = { version = "*", default-features = false }
url = { version = "*", default-features = false }
walkdir = { version = "*", default-features = false }
rand = { version = "*", default-features = false, features = ["thread_rng"] }
rand_distr = { version = "*", default-features = false }
serenity = { version = "*", default-features = false, features = [
    "rustls_backend",
    "builder",
    "chrono",
    "client",
    "gateway",
    "model",
    "utils",
    "collector",
] }
openai_api_rust = { version = "*", default-features = false }
num-format = { version = "*", default-features = false, features = ["std"] }
