[package]
name = "family"
version = "0.1.0"
edition = "2021"

[dependencies]
zayden-core = { workspace = true }

sqlx = { version = "*", default-features = false, features = ["macros"] }
async-trait = { version = "*", default-features = false }
futures = { version = "*", default-features = false }
charming = { version = "*", default-features = false }

[dependencies.serenity]
version = "*"
default-features = false
features = ["rustls_backend", "builder", "client", "gateway", "model"]
